<resources>

    <!-- PAGES -->
    <string name="app_name">Yomanim</string>
    <string name="splash_title">Yomanim network - Social educational and technological environment</string>

    <string name="signin_title">Login in</string>
    <string name="signin_label_login">Enter your login name</string>
    <string name="signin_label_password">Password</string>
    <string name="signin_label_offline_mode">Offline mode</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="button_enter">Enter</string>


    <string name="choose_school_title">Choose school</string>
    <string name="choose_school_role">role:</string>


    <string name="choose_person_title">Choose person</string>
    <string name="choose_person_class">Class name:</string>


    <string name="error_title">Error</string>
    <string name="error_message">This feature is temporary unavailable</string>
    <string name="button_logout">Log out</string>


    <string name="timetable_title">School Timetable</string>
    <string name="timetable_room">room</string>
    <string name="timetable_type_weekend">Weekend</string>
    <string name="timetable_type_each_day">Each day</string>
    <string name="timetable_type_full_weed">Full week</string>
    <string name="timetable_type_undefined">Undefined</string>
    <string name="timetable_empty">Timetable is empty</string>


    <string name="menu_journal">Journal</string>
    <string name="menu_homework">Homework</string>
    <string name="menu_timetable">Timetable</string>
    <string name="menu_schools">Schools</string>
    <string name="menu_child">Child / Student</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>


    <string name="homework_title">Homework</string>
    <string name="homework_status_all">All</string>
    <string name="homework_status_sent">Sent</string>
    <string name="homework_status_closed">Closed</string>
    <string name="homework_th_status">Status</string>
    <string name="homework_th_lesson">Lesson</string>
    <string name="homework_th_subject">Subject</string>
    <string name="homework_th_description">Description</string>
    <string name="homework_label_subject_name">Subject name</string>
    <string name="homework_label_work_status">Work status</string>
    <string name="homework_empty">Homework list is empty</string>
    <string name="button_ok">OK</string>


    <string name="button_grade">Grade</string>
    <string name="button_subject">Subject</string>
    <string name="button_group">Group</string>
    <string name="button_period">Period</string>


    <string name="language_title">Languages</string>
    <string name="language_english">English</string>
    <string name="language_hebrew">Hebrew</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_russian">Russian</string>


    <string name="journal_title">Journal</string>
    <string name="journal_marks">Marks</string>
    <string name="journal_average">Average</string>
    <string name="journal_final">Final</string>
    <string name="journal_th_student">Student name</string>
    <string name="journal_empty">There is no marks</string>


    <string name="modal_subject_title">Subject</string>
    <string name="modal_grade_title">Grade</string>
    <string name="modal_group_title">Edu Group</string>
    <string name="modal_period">Reporting Period</string>
    <string name="modal_week">Reporting Week</string>
    <string name="modal_label_scores">Scores</string>
    <string name="modal_label_attendance">Student was</string>
    <string name="modal_label_remarks">Your remarks</string>
    <string name="modal_placeholder_remarks">Some text with your comment inside</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_choose">Choose</string>
    <!-- END PAGES -->

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <!-- Strings related to login -->

    <string name="yomanim_web"><ul>Yomanim.org.il</ul></string>

    <string name="hello_world">Hello world!</string>
    <string name="action_schools">Schools</string>
    <string name="action_homeworks">Homeworks</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>

    <string name="school_name_placeholder">School title</string>
    <string name="school_avatar_placeholder">School avatar</string>


    <string name="client_id">CECCF4CA-9AB9-46DD-8277-3F06A658D1A4</string>
    <string name="client_secret">645AEA35-5410-49E0-9EF4-A170E44F95EB</string>
    <string name="host_login">login.beta.yomanim.co.il/oauth3</string>
    <string name="host">api.beta.yomanim.co.il</string>
    <!--<string name="host_login">login.work.dev/oauth3</string>-->
    <!--<string name="host">api.work.dev</string>-->
    <string name="protocol">http</string>
    <string name="scope">MobileJournal,Schools,EduGroups,Groups,EduWorks,Lessons,Marks,Roles,Birthday,Avatar,EmailAddress,Contacts</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_journal">Journal</string>
    <string name="title_activity_homework">Homework</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_marginTop">4dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <string name="title_activity_loader">LoaderActivity</string>
    <string name="title_activity_child">ChildActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_error">ErrorActivity</string>
    <string name="title_activity_school">SchoolActivity</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_intro">Yomanim</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>