<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageViewSchoolAvatar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/school_avatar_placeholder"
        android:src="@mipmap/school_ico_logo"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school_name_placeholder"
        android:id="@+id/textViewSchoolTitle"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="5dp"
        android:textColor="#333333"
        android:layout_toRightOf="@+id/imageViewSchoolAvatar"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cit Scolaire Internationale 4, Place de Sfax 38000 Grenoble, France"
        android:id="@+id/textViewCity"
        android:textColor="#333"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/imageViewSchoolAvatar"
        android:layout_below="@+id/textViewSchoolTitle"
        android:textSize="11sp"
        android:singleLine="false"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCity"
        android:layout_alignLeft="@+id/textViewCity"
        android:layout_alignStart="@+id/textViewCity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_school_role"
            android:id="@+id/textViewRoleTitle"
            android:textColor="#333"
            android:layout_toRightOf="@+id/imageViewSchoolAvatar"
            android:layout_below="@+id/textViewCity"
            android:textSize="11sp"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Teacher"
            android:id="@+id/textViewRole"
            android:textColor="#116ea9"
            android:textSize="11sp" />
    </LinearLayout>
</RelativeLayout>